fix spacing and toolbar dark mode colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -66,7 +66,7 @@
 	--ion-color-dark-shade: #1e2023;
 	--ion-color-dark-tint: #383a3e;
 
-  --ion-tab-bar-background: #eee;
+  --ion-tab-bar-background: var(--ion-color-light-tint);
   --metallic: linear-gradient(
       45deg,
       #999 5%,
@@ -80,10 +80,9 @@
   ion-toolbar {
       --background: var(--metallic);
   }
-  ion-toolbar > ion-icon,
-  ion-toolbar > ion-title {
-    padding-left: 12px;
-  }
+}
+html.md ion-title {
+  padding-inline-start: 0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -155,6 +154,18 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    --metallic: linear-gradient(
+      45deg,
+      #333 5%,
+      #777 10%,
+      #444 30%,
+      #555 50%,
+      #444 70%,
+      #777 80%,
+      #333 95%
+    );
+    --ion-tab-bar-background: var(--ion-color-light-tint);
   }
 
   /*
@@ -242,24 +253,6 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
-
-    // #999 5%,
-    // #fff 10%,
-    // #ccc 30%,
-    // #ddd 50%,
-    // #ccc 70%,
-    // #fff 80%,
-    // #999 95%
-    --metallic: linear-gradient(
-        45deg,
-        #333 5%,
-        #777 10%,
-        #444 30%,
-        #555 50%,
-        #444 70%,
-        #777 80%,
-        #333 95%
-    );
   }
 }
 
